Result in RDF by using listener pattern. I need to do the same with the TSV output and the detailed files output. Then I need to refactor the metric result. Work in progress.