@@ -59,7 +59,7 @@ public class DescriptionsPerPropertyMetric extends AnnotationsPerEntityAbstractM
 			totalProperties++;
 			int localNumberOfDescriptions = getNumberOfDescriptions(owlObjectProperty);
 			super.writeToDetailedOutputFile(String.format(Locale.ROOT, "%s\t%s\t%d\n", this.getName(), owlObjectProperty.toStringID(), localNumberOfDescriptions));
-			RDFUtils.createObservation(rdfModel, ontologyIRI, owlObjectProperty.getIRI().toString(), OWL.ObjectProperty.getURI(), getObservablePropertyIRI(), getIRI(), getInstrumentIRI(), getUnitOfMeasureIRI(), new Integer(localNumberOfDescriptions), timestamp);
+			this.notifyExporterListeners(ontologyIRI, owlObjectProperty.getIRI().toString(), OWL.ObjectProperty.getURI(), Integer.valueOf(localNumberOfDescriptions), timestamp);
 			numberOfDescriptions = numberOfDescriptions + localNumberOfDescriptions;
 		}
 		
@@ -70,7 +70,7 @@ public class DescriptionsPerPropertyMetric extends AnnotationsPerEntityAbstractM
 			totalProperties++;
 			int localNumberOfDescriptions = getNumberOfDescriptions(owlDataProperty);
 			super.writeToDetailedOutputFile(String.format(Locale.ROOT, "%s\t%s\t%d\n", this.getName(), owlDataProperty.toStringID(), localNumberOfDescriptions));
-			RDFUtils.createObservation(rdfModel, ontologyIRI, owlDataProperty.getIRI().toString(), OWL.DatatypeProperty.getURI(), getObservablePropertyIRI(), getIRI(), getInstrumentIRI(), getUnitOfMeasureIRI(), new Integer(localNumberOfDescriptions), timestamp);
+			this.notifyExporterListeners(ontologyIRI, owlDataProperty.getIRI().toString(), OWL.DatatypeProperty.getURI(), Integer.valueOf(localNumberOfDescriptions), timestamp);
 			numberOfDescriptions = numberOfDescriptions + localNumberOfDescriptions;
 		}
 		
@@ -81,12 +81,12 @@ public class DescriptionsPerPropertyMetric extends AnnotationsPerEntityAbstractM
 			totalProperties++;
 			int localNumberOfDescriptions = getNumberOfDescriptions(owlAnnotationProperty);
 			super.writeToDetailedOutputFile(String.format(Locale.ROOT, "%s\t%s\t%d\n", this.getName(), owlAnnotationProperty.toStringID(), localNumberOfDescriptions));
-			RDFUtils.createObservation(rdfModel, ontologyIRI, owlAnnotationProperty.getIRI().toString(), OWL.AnnotationProperty.getURI(), getObservablePropertyIRI(), getIRI(), getInstrumentIRI(), getUnitOfMeasureIRI(), new Integer(localNumberOfDescriptions), timestamp);
+			this.notifyExporterListeners(ontologyIRI, owlAnnotationProperty.getIRI().toString(), OWL.AnnotationProperty.getURI(), Integer.valueOf(localNumberOfDescriptions), timestamp);
 			numberOfDescriptions = numberOfDescriptions + localNumberOfDescriptions;
 		}
 		
 		double metricValue = ((double) (numberOfDescriptions)) / totalProperties;
-		RDFUtils.createObservation(rdfModel, ontologyIRI, ontologyIRI, OWL.Ontology.getURI(), getObservablePropertyIRI(), getIRI(), getInstrumentIRI(), getUnitOfMeasureIRI(), new Double(metricValue), timestamp);
+		this.notifyExporterListeners(ontologyIRI, ontologyIRI, OWL.Ontology.getURI(), Double.valueOf(metricValue), timestamp);
 		
 		return new MetricResult(metricValue, rdfModel);
 	}
